# baseDatos

./: CMakeLists.txt  README.md  README.txt  baseDatosControl.cpp  baseDatosControl.h  baseDatosVista.cpp  baseDatosVista.h  basedatos.cpp  basedatos.h  basedatos2.cbp  basedatos2.depend  basedatos2.layout  campo.cpp  campo.h  clases.cpp  clases.h  estudiante.tab  estudiantes.bd  indice.cpp  indice.h  lista.cpp  lista.h  main.cpp  makefile  tabla.cpp  tabla.h  tablaControl.cpp  tablaControl.h  tablaVista.h  tablavista.cpp  universidad.bd
